# enzyme-engineering-workflow

./: .gitignore  README.md  enzymeflow.ps1  pyproject.toml
config/: config.example.yaml  enzymes.example.tsv
docs/: online-tools.md
docs/superpowers/plans/: 2026-07-10-enzyme-engineering-workflow.md
docs/superpowers/specs/: 2026-07-10-enzyme-engineering-workflow-design.md
src/enzymeflow/: cache.py  cli.py  config.py  foldx.py  mapping.py  models.py  mutations.py  normalize.py  report.py  state.py  wizard.py  workflow.py
tests/: test_cache.py  test_mapping.py  test_mutations.py  test_normalize.py  test_report.py  test_wizard.py
