[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "enzymeflow"
version = "0.1.0"
description = "Reusable enzyme engineering and FoldX workflow"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "biopython>=1.80", "PyYAML>=6.0", "matplotlib>=3.7", "seaborn>=0.12", "openpyxl>=3.1"]

[project.scripts]
enzymeflow = "enzymeflow.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

